--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -8,7 +8,7 @@
 {% include 'alerts.html' %}
 <div class="container">
 	<div class="row">
-	
+	{% include 'dashboard_sidebar.html' %}
 	<main class="col-md-9">
 		<article class="card">
 		<header class="card-header">
