project almost done

--- a/dashboard/templates/admin_dashboard/page-account-login.html
+++ b/dashboard/templates/admin_dashboard/page-account-login.html
@@ -2,31 +2,39 @@
 {% load static %}
 {% block content %}
 <section class="content-main mt-80 mb-80">
+    {% include 'admin_dashboard/alert.html' %}
     <div class="card mx-auto card-login">
-        <div class="card-body">
-            <h4 class="card-title mb-4">Sign in</h4>
-            <form method="POST" action="{% url 'admin_login' %}">
-                {% csrf_token %}
-                <div class="form-group form-box">
-                  <input type="text" name="email" class="input-text" placeholder="email" required>
-                  <i class="flaticon-mail"></i>
-                </div>
-                
-                <div class="form-group">
-                  <input type="password" class="form-control" placeholder="Password" name="password">
-                </div> <!-- form-group// -->
-        
-                <div class="form-group">
-                  <a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a>
-        
-                </div> <!-- form-group form-check .// -->
-                <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login </button>
-                </div> <!-- form-group// -->
-              </form>
-           
-            <p class="text-center mb-4">Don't have account? <a href="{%url 'admin_register' %}">Sign up</a></p>
-        </div>
-    </div>
+      <div class="card-body">
+        {% if user.is_admin %}
+          <h4 class="card-title mb-4">Sign in</h4>
+          <form method="POST" action="{% url 'admin_login' %}">
+            {% csrf_token %}
+              <div class="mb-3">
+                  
+                  <input class="form-control" name="email" placeholder="Username" type="text">
+                  
+              </div> <!-- form-group// -->
+              <div class="mb-3">
+                  <input class="form-control" placeholder="Password" type="password" name="password">
+
+              </div> <!-- form-group// -->
+              
+              <div class="mb-3">
+                  <a href="#" class="float-end font-sm text-muted">Forgot password?</a>
+                  
+              </div> <!-- form-group form-check .// -->
+              <div class="mb-4">
+                  <button type="submit" class="btn btn-primary w-100"> Login </button>
+              </div> <!-- form-group// -->
+          </form>
+          {% else %}
+          <h4> Admin panel login here  </h4>
+          {% endif %}
+          <p class="text-center small text-muted mb-15">or sign up with</p>
+          
+          <p class="text-center mb-4">Don't have account? <a href="{% url 'admin_register' %}">Sign up</a></p>
+      </div>
+  </div>
+  
 </section>
 {% endblock %}
