--- a/templates/Categories.html
+++ b/templates/Categories.html
@@ -2,7 +2,7 @@
 <section class="featured section-padding position-relative">
     <div class="container">
         <div class="row">
-            {% for category in links %}
+            {% for category in categories %}
             <div class="col-lg-2 col-md-4 mb-md-3 mb-lg-0">
                 
                 <div class="banner-features wow fadeIn animated hover-up">
