--- a/dashboard/templates/admin_dashboard/admin_add_category.html
+++ b/dashboard/templates/admin_dashboard/admin_add_category.html
@@ -3,9 +3,10 @@
 {% block content %}
 
 <div class="col-md-3">
-    <form method="POST" action="{% url 'admin_add_category' %}" enctype="multipart/form-data>
+    {% include 'admin_dashboard/alert.html' %}
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <!--<div class="mb-4">
+        <!--<div class="col-12"></form>
             <label for="category_name" class="form-label">Name</label>
             <input type="text" placeholder="Type here" class="form-control" id="category_name" name="category_name" />
         </div>-->
@@ -25,8 +26,7 @@
             <textarea placeholder="Type here" class="form-control" id="description" name="description"></textarea>
         </div>
         <div class="form-row field-cat_image">
-            <div><label for="id_cat_image">Cat image</label>
-              <input name="cat_images" type="file" accept="image/*"/>
+              <input name="cat_image" class="form-control" type="file" accept="image/*"/>
             </div>
           </div>
           
