--- a/dashboard/templates/admin_dashboard/nav.html
+++ b/dashboard/templates/admin_dashboard/nav.html
@@ -19,12 +19,11 @@
                 </a>
             </li>
             <li class="menu-item has-submenu">
-                <a class="menu-link" href="{% url 'admin_product_list' %}"> <i class="icon material-icons md-shopping_bag"></i>
+                <a class="menu-link" href="3"> <i class="icon material-icons md-shopping_bag"></i>
                     <span class="text">Products</span>
                 </a>
                 <div class="submenu">
                     <a href="{% url 'admin_product_list' %}">Product List</a>
-                    <a href="{% url 'admin_product_add' %}">Add product 1</a>
                     <a href="#">Product</a>
                     <a href="{% url 'admin_products_category' %}">Categories</a>
                 </div>
@@ -35,8 +34,8 @@
                     <span class="text">Account</span>
                 </a>
                 <div class="submenu">
-                    <a href="{% url 'admin_login' %}">User login</a>
-                    <!--<a href="page-account-register.html">User registration</a>-->
+                    <a href="{% url 'admin_login' %}">Admin login</a>
+                    <a href="{% url 'admin_register' %}">Admin registration</a>
                 </div>
             </li>
 
@@ -74,9 +73,9 @@
                 <li class="dropdown nav-item">
                     <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount"
                         aria-expanded="false"> <img class="img-xs rounded-circle"
-                            src="#" alt="User">{{username}}</a>
+                            src="#" alt="User">{{user.first_name}}</a>
                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
-                        <a class="dropdown-item" href="#"><i class="material-icons md-perm_identity"></i>Edit
+                        <a class="dropdown-item" href="{% url 'admin_edit_profile' %}"><i class="material-icons md-perm_identity"></i>Edit
                             Profile</a>
                         <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account Settings</a>
                         <a class="dropdown-item" href="#"><i
@@ -84,7 +83,7 @@
                         <a class="dropdown-item" href="#"><i class="material-icons md-receipt"></i>Billing</a>
                         <a class="dropdown-item" href="#"><i class="material-icons md-help_outline"></i>Help center</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#"><i
+                        <a class="dropdown-item text-danger" href="{% url 'admin_logout' %}"><i
                                 class="material-icons md-exit_to_app"></i>Logout</a>
                     </div>
                 </li>
