--- a/dashboard/templates/admin_dashboard/page-products-list.html
+++ b/dashboard/templates/admin_dashboard/page-products-list.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <section class="content-main">
+    {% include 'admin_dashboard/alert.html' %}
     <div class="content-header">
         <div>
             <h2 class="content-title card-title">Products List</h2>
@@ -11,51 +12,61 @@
         <div>
             <a href="#" class="btn btn-light rounded font-md">Export</a>
             <a href="#" class="btn btn-light rounded  font-md">Import</a>
-            <a href="#" class="btn btn-primary btn-sm rounded">Create new</a>
+
+            <a href="{% url 'admin_add_product' %}" class="btn btn-primary btn-sm rounded">Create new</a>
+
         </div>
     </div>
     <div class="card mb-4">
         <header class="card-header">
-            <div class="row align-items-center">
-                <div class="col col-check flex-grow-0">
-                    <div class="form-check ms-2">
-                        <input class="form-check-input" type="checkbox" value="">
+            <form action="" method="GET">
+                <div class="row align-items-center">
+                    <div class="col col-check flex-grow-0">
+                        <div class="form-check ms-2">
+                            <input class="form-check-input" type="checkbox" value="">
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
+                        <select class="form-select">
+                            <option selected>All category</option>
+                            {% for category in links %}
+                            <option><a href="{{ category.get_url }}">{{category.category_name}}</a></option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-md-2 col-6">
+                        <input type="date" value="02.05.2021" class="form-control">
+                    </div>
+                    <div class="col-md-2 col-6">
+                        <select class="form-select">
+                            <option selected>Status</option>
+                            {% for product in products %}
+                            <option selected>{{product.label}}</option>
+                            {% endfor %}
+
+                        </select>
                     </div>
                 </div>
-                <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
-                    <select class="form-select">
-                        <option selected>All category</option>
-                        {% for category in links %}
-                        <option><a href="{{ category.get_url }}">{{category.category_name}}</a></option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="col-md-2 col-6">
-                    <input type="date" value="02.05.2021" class="form-control">
-                </div>
-                <div class="col-md-2 col-6">
-                    <select class="form-select">
-                        <option selected>Status</option>
-                        {% for product in products %}
-                        <option selected>{{product.label}}</option>
-                        {% endfor %}
-
-                    </select>
-                </div>
-            </div>
+            </form>
         </header> <!-- card-header end// -->
 
         <div class="card-body">
-            
+
             {% for product in products %}
             <article class="itemlist">
 
                 <div class="row align-items-center">
+                    <!--<div class="col col-check flex-grow-0">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox">
+                        </div>
+                    </div>-->
                     <div class="col col-check flex-grow-0">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox">
                         </div>
                     </div>
+
                     <div class="col-lg-4 col-sm-4 col-8 flex-grow-1 col-name">
                         <a class="itemside" href="{{ product.get_url }}">
                             <div class="left">
@@ -71,13 +82,15 @@
                         <span class="badge rounded-pill alert-success">{{product.label}}</span>
                     </div>
                     <div class="col-lg-1 col-sm-2 col-4 col-date">
-                        <span>02.11.2021</span>
+                        <span>{{product.modified_date}}</span>
                     </div>
                     <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
-                        <a href="#" class="btn btn-sm font-sm rounded btn-brand">
+                        <a href="{% url 'admin_edit_product' product.id %}"
+                            class="btn btn-sm font-sm rounded btn-brand">
                             <i class="material-icons md-edit"></i> Edit
                         </a>
-                        <a href="#" class="btn btn-sm font-sm btn-light rounded">
+                        <a href="{% url 'admin_product_delete' product.id %}"
+                            class="btn btn-sm font-sm btn-light rounded">
                             <i class="material-icons md-delete_forever"></i> Delete
                         </a>
                     </div>
@@ -86,22 +99,37 @@
                 <!-- row .// -->
             </article> <!-- itemlist  .// -->
             {% endfor %}
-           
+
 
 
         </div> <!-- card-body end// -->
     </div> <!-- card end// -->
     <div class="pagination-area mt-30 mb-50">
         <nav aria-label="Page navigation example">
+            {% if products.has_other_pages %}
             <ul class="pagination justify-content-start">
-                <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                <li class="page-item"><a class="page-link" href="#">02</a></li>
-                <li class="page-item"><a class="page-link" href="#">03</a></li>
-                <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                <li class="page-item"><a class="page-link" href="#">16</a></li>
-                <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a>
+                {% if products.has_previous %}
+                <li class="page-item active"><a class="page-link" href="?page={{products.previous_page_number}}">Pre</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">Pre</a></li>
+                {% endif %}
+                {% for i in products.paginator.page_range %}
+                {% if products.number == i %}
+                <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+                {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                {% endif %}
+                {% endfor %}
+                {% if products.has_next%}
+                <li class="page-item active"><a class="page-link" href="?page={{products.next_page_number}}">Next</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                    {% endif %}
                 </li>
             </ul>
+            {% endif %}
         </nav>
     </div>
 </section>
