file add after come change

--- a/dashboard/templates/admin_dashboard/page-account-login.html
+++ b/dashboard/templates/admin_dashboard/page-account-login.html
@@ -5,7 +5,7 @@
     {% include 'admin_dashboard/alert.html' %}
     <div class="card mx-auto card-login">
       <div class="card-body">
-        {% if user.is_admin %}
+        
           <h4 class="card-title mb-4">Sign in</h4>
           <form method="POST" action="{% url 'admin_login' %}">
             {% csrf_token %}
@@ -27,12 +27,10 @@
                   <button type="submit" class="btn btn-primary w-100"> Login </button>
               </div> <!-- form-group// -->
           </form>
-          {% else %}
-          <h4> Admin panel login here  </h4>
-          {% endif %}
-          <p class="text-center small text-muted mb-15">or sign up with</p>
           
-          <p class="text-center mb-4">Don't have account? <a href="{% url 'admin_register' %}">Sign up</a></p>
+          
+          
+          <!--<p class="text-center mb-4">Don't have account? <a href="{% url 'admin_register' %}">Sign up</a></p>-->
       </div>
   </div>
   
