--- a/templates/payments.html
+++ b/templates/payments.html
@@ -109,7 +109,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" name="submit" class="btn btn-fill-out btn-block mt-30">Payment</button>
+                            <a href="{% url 'dashboard' %}" name="submit" class="btn btn-fill-out btn-block mt-30">Payment</a>
+                            <!--<button type="submit" name="submit" class="btn btn-fill-out btn-block mt-30">Payment</button>-->
                         </div>
                     </div>
                 </div>
