--- a/dashboard/templates/admin_dashboard/product_add.html
+++ b/dashboard/templates/admin_dashboard/product_add.html
@@ -11,8 +11,8 @@
                     <div>
                         <button type="submit" class="btn btn-light rounded font-sm mr-5 text-body hover-up">Save to
                             draft</button>
-
-                        <button class="btn btn-md rounded font-sm hover-up">Publich</button>
+                        
+                        <button type="submit" class="btn btn-md rounded font-sm hover-up">Publich</button>
                     </div>
                 </div>
             </div>
@@ -78,16 +78,10 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <!--<div class="mb-4">
-                            <label class="form-label">Create Date</label>
-                            <input type="datetime" placeholder="Type here" name="" class="form-control">
-                        </div>-->
-
-
                     </div>
                 </div>
             </div>
-        </div>-->
+        </div>
     </form>
     </div>
 </section>
