--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -78,7 +78,7 @@
                                 <thead>
                                     <tr>
                                         <th colspan="2">Product</th>
-                                        <th>Total</th>
+                                        <th> Price</th>
                                     </tr>
                                 </thead>
                                 {% for cart_item in cart_items %}
@@ -101,13 +101,14 @@
                                         <th>Tax</th>
                                         <td colspan="2"><em>{{ tax }}</em></td>
                                     </tr>
+                                    {% endfor %}
                                     <tr>
-                                        <th>Total</th>
+                                        <th>Total Price </th>
                                         <td colspan="2" class="product-subtotal"><span
                                                 class="font-xl text-brand fw-900">{{grand_total}}</span></td>
                                     </tr>
                                 </tbody>
-                                {% endfor %}
+                                
                             </table>
                         </div>
                         <div class="bt-1 border-color-1 mt-30 mb-30"></div>
@@ -118,7 +119,7 @@
 
                         </div>
                         <button type="submit" name="submit" class="btn btn-fill-out btn-block mt-30">PlaceOrder</button>
-                        <a href="{% url 'home' %}" class="btn btn-light btn-block">Continue Shopping</a>
+                        <a href="{% url 'home' %}" class="btn btn-fill-out btn-block mt-30">Continue Shopping</a>
 
                     </div>
                     </form>
