--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,17 +17,26 @@
 		</header>
 		<div class="card-body">
 			<div class="row">
-
-			
-			<div class="col-md-6">
-				<div class="card" style="text-align:center;">
-					<div class="card-body">
-						<img src="{{userprofile.profile_picture.url}}" alt="User Profile Picture" width="50" height="50" style="border-radius:50%;">
-						<p class="mb-0">{{user.email}}</p>
-						<p>{{user.phone_number}}</p>
+				<div class="col-md-6">
+					<div class="card" style="text-align:center;">
+						<div class="card-body">
+							<h5 class="card-title">Total Orders</h5>
+							<h4>{{orders_count}}</h4>
+							<a href="#">View Orders</a>
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="col-md-6">
+					<div class="card" style="text-align:center;">
+						<div class="card-body">
+							<img src="{{userprofile.profile_picture.url}}" alt="User Profile Picture" width="50" height="50" style="border-radius:50%;">
+							<p class="mb-0">{{user.email}}</p>
+							<p>{{user.phone_number}}</p>
+						</div>
+					</div>
+				</div>
+			
+			
 
 			</div> <!-- row.// -->
 		</div> <!-- card-body .// -->
