--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="table-responsive">
-                        
+
                         <table class="table shopping-summery text-center">
                             <thead>
                                 <tr class="main-heading">
@@ -38,34 +38,39 @@
                                 <tr>
                                     <td class="image product-thumbnail"><img src="{{ cart_item.product.images.url }}" alt="#"></td>
                                     <td class="product-des product-name">
-                                        <h5 class="product-name"><a href="{{ cart_item.product.get_url }}">{{cart_item.product.product_name }}</a></h5>
-                                        
+                                        <h5 class="product-name"><a href="{{ cart_item.product.get_url }}">{{cart_item.product.product_name}}</a></h5>
+
                                     </td>
                                     <td class="price" data-title="Price"><span>{{ cart_item.product.price }}</span></td>
                                     <td class="text-center" data-title="Quantity">
                                         <div class="input-group-prepend">
-                                            <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                                            <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}"
+                                                class="btn btn-light" type="button" id="button-plus"> <i
+                                                    class="fa fa-minus"></i> </a>
                                         </div>
                                         <span class="color3 font-weight-bold">{{ cart_item.quantity }}</span>
                                         <div class="input-group-prepend">
-                                            <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+                                            <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn"
+                                                type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
                                         </div>
                                     </td>
-                                    <!--<td class="text-right" data-title="Cart">
-                                        <a class="btn btn-sm" href="{% url 'add_cart' cart_item.product.id %}"><i class="fi-rs-shopping-bag mr-5"></i>Add to cart</a>
-                                    </td>-->
-                                    <td class="action" data-title="Remove"><a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" ><i class="fi-rs-trash"></i></a></td>
+                                    
+                                    <td class="action" data-title="Remove"><a
+                                            href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}"onclick="return confirm('Are you sure you want to delete this item?')"><i class="fi-rs-trash"></i></a></td>
                                 </tr>
-
-                                
                                 {% endfor %}
                             </tbody>
                         </table>
                     </div>
                 </div>
+                <div class="text-center">
+                    <h1></h1>
+                    <a href="{% url 'home' %}" class="btn btn"> Continue Shoping</a>
+                </div>
             </div>
             {% endif %}
         </div>
+        
     </section>
 </main>
 {% endblock %}
