--- a/templates/nav.html
+++ b/templates/nav.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="{% url 'home' %}">Go4plant</a>
+                        <a href="{% url 'home' %}">plantdekho</a>
                     </div>
 
                     <div class="header-right">
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="header-wrap header-space-between position-relative">
                     <div class="logo logo-width-1 d-block d-lg-none">
-                        <a href="{% url 'home' %}">Go4plant</a>
+                        <a href="{% url 'home' %}">plantdekho</a>
                     </div>
                     <div class="header-nav d-none d-lg-flex">
 
