--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="widget-about font-md mb-md-5 mb-lg-0">
                         <div class="logo logo-width-1 wow fadeIn animated">
-                            <a href="{% url 'home' %}">Go4plant</a>
+                            <a href="{% url 'home' %}">plantdekho</a>
                         </div>
                         <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
                         <p class="wow fadeIn animated">
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-6">
                 <p class="float-md-left font-sm text-muted mb-0">&copy; 2021, <strong
-                        class="text-brand">Go4plant</strong></p>
+                        class="text-brand">plantdekho</strong></p>
             </div>
             <div class="col-lg-6">
                 <p class="text-lg-end text-start font-sm text-muted mb-0">
