--- a/templates/register.html
+++ b/templates/register.html
@@ -49,6 +49,7 @@
 			    <div class="form-group">
 			        <button type="submit" class="btn btn-primary btn-block"> Register  </button>
 			    </div> <!-- form-group// -->
+	   {{form.phone_number.errors}}
       {{ form.email.errors }}
       {{ form.non_field_errors }}
 			</form>
