change some in account

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -23,7 +23,8 @@
                     {% else %}
                     <div class="col-xl-3 col-lg-4">
                         <div class="header-info header-info-right">
-                            <!--<small class="title text-muted">Welcome </small>-->
+                            <small class="title text-muted">Welcome  {{user.first_name}} </small>
+                            <div> !</div>
                             <div>
                                 <a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
                                 <a href="{% url 'logout' %}"> Logout</a>
