--- a/dashboard/templates/admin_dashboard/nav.html
+++ b/dashboard/templates/admin_dashboard/nav.html
@@ -71,9 +71,8 @@
                 
                 
                 <li class="dropdown nav-item">
-                    <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount"
-                        aria-expanded="false"> <img class="img-xs rounded-circle"
-                            src="#" alt="User">{{user.first_name}}</a>
+                    <a class="dropdown-toggle" data-bs-toggle="dropdown"  id="dropdownAccount"
+                            src="#" alt="">{{user.first_name}}</a>
                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
                         
                         <a class="dropdown-item text-danger" href="{% url 'admin_logout' %}"><i
